# gamer-rust

./: Cargo.toml  README.md  benchmarks.txt  rustfmt.toml
benches/: benchmarks.rs  benchmarks.txt  main.rs
spec/: mcts_sampler_1.json  mcts_sampler_2.json  mcts_terminal.json  minimax_sampler_1.json  minimax_sampler_16.json  minimax_sampler_2.json  minimax_sampler_32.json  minimax_sampler_4.json  minimax_sampler_8.json  minimax_terminal.json  minimax_terminal_1.json  minimax_terminal_100.json  minimax_terminal_2.json  minimax_terminal_3.json  minimax_terminal_4.json  minimax_terminal_5.json  random.json
spec/gomoku/: evaluator_1_tmpl.json  evaluator_2_tmpl.json  evaluator_3_tmpl.json  ladder_annealing_1.json  mcts_3_2.json  mcts_3_man.json  minimax_1.json  minimax_2.json  minimax_3.json  minimax_3_2.json  minimax_3_man.json  training.json  training_ladder_annealing.json
spec/hexapawn/: complete_1.json  complete_2.json  evaluator_tmpl.json  ladder_annealing_1.json  ladder_annealing_2.json  mcts_complete_1.json  mcts_number_of_pawns_1.json  minimax_number_of_pawns.json  minimax_number_of_pawns_1.json  minimax_number_of_pawns_2.json  minimax_number_of_pawns_3.json  minimax_number_of_pawns_4.json  training.json  training_complete.json  training_complete_annealing.json  training_ladder_annealing.json
src/: benchmarks.rs  board.rs  def.rs  equal_policy.rs  feature_evaluator.rs  hexapawn.rs  human_agent.rs  ladder.rs  lib.rs  main.rs  opt.rs  play.rs  random_agent.rs  ratings.rs  registry.rs  sampler_evaluator.rs  spec.rs  status.rs  subtractor.rs  terminal_evaluator.rs
(+47 files in other folders)
