[package]
name = "gamer"
version = "0.0.1"
authors = ["Oleg Eterevsky <oleg@eterevsky.com>"]

[lib]
name = "gamer"
path = "src/lib.rs"

[[bin]]
name = "gamer"
path = "src/main.rs"

[[bench]]
name = "main"
harness = false

[dependencies]
clap = "2"
lazy_static = "0.2"
rand = "0.3"

[dev-dependencies]
bencher = "0.1.4"
