[package]
name = "gamer"
version = "0.1.0"
authors = ["Oleg Eterevsky <oleg@eterevsky.com>"]

[lib]
name = "gamer"
path = "src/lib.rs"

[[bin]]
name = "gamer"
path = "src/main.rs"

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
clap = "2"
lazy_static = "0.2"
num_cpus = "1.0"
rand = "0.3"
regex = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
bencher = "0.1.4"
